# loop_subdivison

./: README.md  REDME.md  pyproject.toml
Subdivision/Python/halfedge_mesh/: main.py  test.py
Subdivision/Python/halfedge_mesh.egg-info/: PKG-INFO  SOURCES.txt
Subdivision/Python/halfedge_mesh/halfedge_mesh/: __init__.py  halfedge_mesh.py  loop_subdivision.py
Subdivision/Python/halfedge_mesh/tests/data/: loop_teapot.off
