[tool.poetry]
name = "loop_subdivision"
version = "0.1.0"
description = "Performing loop subdivision for triangular mesh"
authors = ["k1majd <54868379+k1majd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
